# osaker-lang

./: .gitignore  README.md  pyproject.toml  ruff.toml
examples/: import_me.osaka  importing_an_osaka.osaka  inspect_string.osaka  simple_math.osaka
osaker/: __init__.py  __main__.py  ayumu_object.py  errors.py  exception.py  lexer.py  logger.py  osaka_type.py  parser.py  token.py  typings.py
