[project]
name = "osaker-lang"
description = "Osaker is a super fast programming language with amazing and such easy to understand syntax that even Osaka can understand."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.xyz"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "osaka",
    "azumanga daioh",
    "anime"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11'
]
dependencies = [
    "typer",
    "sly@git+https://github.com/dabeaz/sly",
    "devgoldyutils"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build"
]

[project.urls]
GitHub = "https://github.com/THEGOLDENPRO/osaker-lang"
BugTracker = "https://github.com/THEGOLDENPRO/osaker-lang/issues"

[tool.setuptools.dynamic]
version = { attr = "osaker.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["osaker*"]

[project.scripts]
osaker = "osaker.__main__:app"